--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/electron/electron-quick-start.git"
+    "url": "git+https://github.com/amitmerchant1990/markdownify.git"
   },
   "keywords": [
     "electron",
@@ -23,9 +23,13 @@
   "author": "Amit Merchant",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/electron/electron-quick-start/issues"
+    "url": "https://github.com/amitmerchant1990/markdownify/issues"
   },
-  "homepage": "https://github.com/electron/electron-quick-start#readme",
+  "homepage": "https://github.com/amitmerchant1990/markdownify#readme",
+  "_npmUser": {
+    "name": "amit_merchant",
+    "email": "bullredeyes@gmail.com"
+  },
   "devDependencies": {
     "electron-prebuilt": "^0.36.0"
   }
