--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "node",
     "minimal",
     "editor",
-    "preview"
+    "preview",
+    "html",
+    "desktop"
   ],
-  "author": "Amit Merchant",
+  "author": "Amit Merchant <bullredeyes@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/amitmerchant1990/markdownify/issues"
@@ -34,6 +36,7 @@
     "electron-prebuilt": "^0.36.0"
   },
   "dependencies": {
+    "electron-editor-context-menu": "^1.1.1",
     "showdown": "^1.3.0"
   }
 }
