--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "email": "bullredeyes@gmail.com"
   },
   "devDependencies": {
+    "devtron": "^1.1.2",
     "electron-prebuilt": "^0.36.0"
   },
   "dependencies": {
