--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.6",
   "description": "A minimalist Markdown Editor",
   "main": "main.js",
-  "productName": "Electron Markdownify",
+  "productName": "Markdownify",
   "scripts": {
     "start": "electron main.js"
   },
@@ -40,6 +40,7 @@
   "dependencies": {
     "electron-editor-context-menu": "^1.1.1",
     "showdown": "^1.3.0",
-    "electron-json-storage": "latest"
+    "electron-json-storage": "latest",
+    "parse-filepath": "latest"
   }
 }
