--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-markdownify",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "A minimalist Markdown Editor",
   "main": "main.js",
   "productName": "Markdownify",
@@ -47,6 +47,7 @@
     "electron-localshortcut": "^1.0.0",
     "highlightjs": "^9.8.0",
     "parse-filepath": "latest",
+    "parse-katex": "^0.3.0",
     "showdown": "^1.3.0"
   }
 }
