--- a/package.json
+++ b/package.json
@@ -37,17 +37,17 @@
   "devDependencies": {
     "devtron": "^1.1.2",
     "electron-packager": "^7.0.3",
-    "electron": "^1.4.1",
+    "electron": "^1.7.11",
     "gulp": "^3.9.1"
   },
   "dependencies": {
     "electron-config": "^0.2.1",
     "electron-editor-context-menu": "^1.1.1",
-    "electron-json-storage": "latest",
+    "electron-json-storage": "^4.0.2",
     "electron-localshortcut": "^1.0.0",
     "highlightjs": "^9.8.0",
-    "parse-filepath": "latest",
+    "parse-filepath": "^1.0.2",
     "parse-katex": "^0.3.0",
-    "showdown": "^1.3.0"
+    "showdown": "^1.8.6"
   }
 }
